--- a/tasks/modules/zlib.yml
+++ b/tasks/modules/zlib.yml
@@ -2,14 +2,15 @@
 - name: Clone cloudflare zlib repo
   git:
     repo: https://github.com/cloudflare/zlib.git
-    dest: "{{src_location}}/zlib"
+    dest: "{{ src_location }}/zlib"
     force: yes
 
 - name: Zlib distclean
-  shell:
-    cmd: make -f Makefile.in distclean
-    chdir: "{{src_location}}/zlib"
+  make:
+    file: Makefile.in
+    target: distclean
+    chdir: "{{ src_location }}/zlib"
 
 - name: Set zlib nginx compile args
   set_fact:
-    nginx_configure_arg: "{{nginx_configure_arg}} --with-zlib={{src_location}}/zlib"
+    nginx_configure_arg: "{{ nginx_configure_arg }} --with-zlib={{ src_location }}/zlib"
