--- a/tasks/lua.yml
+++ b/tasks/lua.yml
@@ -8,18 +8,22 @@
   git:
     repo: https://github.com/openresty/lua-resty-core.git
     dest: "{{ src_location }}/lua-resty-core"
+    version: v0.1.18rc1
 
 - name: Install lua-resty-core
-  shell:
-    cmd: rsync -avh lua-resty-core/lib/ {{ nginx_install }}/lua
-    chdir: "{{ src_location }}"
+  synchronize:
+    src: "{{ src_location }}/lua-resty-core/lib/"
+    dest: "{{ nginx_install }}/lua"
+    archive: yes
 
 - name: Clone lua-resty-lrucache repo
   git:
     repo: https://github.com/openresty/lua-resty-lrucache.git
     dest: "{{ src_location }}/lua-resty-lrucache"
+    version: v0.10rc1
 
 - name: Install lua-resty-lrucache
-  shell:
-    cmd: rsync -avh lua-resty-lrucache/lib/ {{ nginx_install }}/lua
-    chdir: "{{ src_location }}"
+  synchronize:
+    src: "{{ src_location }}/lua-resty-lrucache/lib/"
+    dest: "{{ nginx_install }}/lua"
+    archive: yes
