--- a/tasks/modules/dev_kit.yml
+++ b/tasks/modules/dev_kit.yml
@@ -4,6 +4,7 @@
     repo: https://github.com/simpl/ngx_devel_kit.git
     dest: "{{ src_location }}/dev_kit"
     force: yes
+    version: v0.3.1
 
 - name: Set dev_kit nginx compile args
   set_fact:
