fix: add ansible lint to ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,25 @@ sudo: required
 services:
 - docker
 
-script:
-- export RUN_ARGS="--rm --privileged -v /lib/modules/:/lib/modules/ -v $(pwd):/etc/ansible/roles/nginx/"
-- export PLAYBOOK="-i /etc/ansible/roles/nginx/tests/inventory /etc/ansible/roles/nginx/tests/test.yml"
+before_script:
+- pip install --upgrade ansible-lint
 
-- docker run $RUN_ARGS indexyz/ansible:debian-9 $PLAYBOOK
+stages:
+  - ansible-lint
+  - ansible-run-test
+
+ansible-lint:
+  stage: ansible-lint
+  script:
+    - ansible-lint tests/test.yml
+
+ansible-run-test:
+  stage: ansible-run-test
+  script:
+  - export RUN_ARGS="--rm --privileged -v /lib/modules/:/lib/modules/ -v $(pwd):/etc/ansible/roles/nginx/"
+  - export PLAYBOOK="-i /etc/ansible/roles/nginx/tests/inventory /etc/ansible/roles/nginx/tests/test.yml"
+
+  - docker run $RUN_ARGS indexyz/ansible:debian-9 $PLAYBOOK
 
 notifications:
  webhooks: https://galaxy.ansible.com/api/v1/notifications/
