--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -30,6 +30,7 @@ nginx_configure_arg: --http-client-body-temp-path=/tmp/nginx_client_body
   --with-threads
   --with-file-aio
   --with-stream
+  --with-http_dav_module
   --with-stream_realip_module
   --with-stream_ssl_module
   --with-stream_ssl_preread_module
