fix: default server no ssl settings

--- a/templates/default.conf
+++ b/templates/default.conf
@@ -7,7 +7,7 @@ server {
 }
 
 server {
-  listen 443 default_server;
+  listen 443 default_server ssl;
   ssl_certificate {{nginx_install}}/certs/selfsign/public.pem;
   ssl_certificate_key {{nginx_install}}/certs/selfsign/private.pem;
 
