--- a/tasks/dependencies/centos.yml
+++ b/tasks/dependencies/centos.yml
@@ -16,9 +16,13 @@
     state: installed
     update_cache: yes
 
+# Ansible not support config-manager
+# See: https://github.com/ansible/ansible/issues/46963
 - name: Enable PowerTools repo # noqa 305 301
   when: ansible_distribution_major_version == '8'
   command: dnf config-manager --set-enabled PowerTools
+  args:
+    warn: no
 
 - name: Install centos packages
   yum:
