--- a/templates/nginx.conf
+++ b/templates/nginx.conf
@@ -57,7 +57,7 @@ http {
   brotli_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
 
   keepalive_timeout 65;
-  lua_package_path "{{ nginx_install }}/lua/lua-resty-core/?.lua;;{{ nginx_install }}/lua/lua-resty-lrucache/?.lua;;{{ nginx_install }}/lua/nginx-lua-prometheus/?.lua;;";
+  lua_package_path "{{ nginx_install }}/lua/lua-resty-core/lib/?.lua;;{{ nginx_install }}/lua/lua-resty-lrucache/lib/?.lua;;{{ nginx_install }}/lua/nginx-lua-prometheus/?.lua;;";
 
   include conf/*.conf;
 }
