--- a/tasks/modules/lua_jit.yml
+++ b/tasks/modules/lua_jit.yml
@@ -1,26 +1,17 @@
 ---
-- name: Get lua_jit src tarball
-  get_url:
-    url: "https://luajit.org/download/LuaJIT-{{ lua_jit_version }}.tar.gz"
-    dest: "{{ src_location }}/lua_jit.tgz"
-
-- name: Extract lua_jit src tarball
-  unarchive:
-    src: "{{ src_location }}/lua_jit.tgz"
-    dest: "{{ src_location }}"
-    remote_src: yes
-
-- name: Remove lua_jit src tarball
-  file:
-    path: "{{ src_location }}/lua_jit.tgz"
-    state: absent
+- name: Get openresty / luajit2
+  git:
+    repo: https://github.com/openresty/luajit2.git
+    dest: "{{ src_location }}/lua_jit"
+    force: yes
+    version: "{{ lua_jit_version }}"
 
 - name: Compile lua_jit
   make:
     target: install
     params:
       PREFIX: "{{ lua_jit_install }}"
-    chdir: "{{ src_location }}/LuaJIT-{{ lua_jit_version }}"
+    chdir: "{{ src_location }}/lua_jit"
 
 - name: Set lua_jit lib to ld config
   lineinfile:
